# codi_protocols

./: .gitignore  Cargo.toml  flake.nix
.devcontainer/: devcontainer.json
src/codi_boot_protocol/: Cargo.toml  build.rs
src/codi_boot_protocol/protocol/: codi_boot_flashing.fbs  codi_boot_flashing.proto
src/codi_boot_protocol/src/: lib.rs  protocol_codi_boot_flashing.rs  protocol_common_variants.rs
src/codi_bootload_proto/: Cargo.toml  build.rs
src/codi_bootload_proto/protocol/: bootload_flashing.proto
src/codi_bootload_proto/protocol/common/: variants.proto
src/codi_bootload_proto/src/: lib.rs  protocol_common_variants.rs
src/codi_bootload_protocol/: Cargo.toml
src/codi_bootload_protocol/protocol/common/: self.proto  variants.proto
src/codi_bootload_protocol/src/: lib.rs  protocol_bootload_flashing.rs  protocol_common_self.rs
src/codi_daemon_proto/: Cargo.toml
src/codi_daemon_proto/src/: lib.rs
src/codi_daemon_protocol/: Cargo.toml
src/codi_daemon_protocol/src/: lib.rs
src/codi_os_proto/: Cargo.toml  build.rs
src/codi_os_proto/protocol/: command_telephony.proto  flashing.proto
src/codi_os_proto/protocol/common/: self.proto  variants.proto
src/codi_os_proto/src/: lib.rs  protocol_common_variants.rs  protocol_flashing.rs
src/codi_os_protocol/: Cargo.toml  build.rs
src/codi_os_protocol/protocol/: command_telephony.proto
src/codi_os_protocol/protocol/common/: self.proto
src/codi_os_protocol/src/: lib.rs  protocol_command_telephony.rs  protocol_common_self.rs
src/codi_proto_common/: Cargo.toml
src/codi_proto_common/src/: lib.rs
src/codi_proto_common/src/std_serial_handler/: mod.rs
src/codi_protocol_common/: Cargo.toml
src/codi_protocol_common/src/: common.rs  lib.rs  no_std_serial_port_manager.rs  std_serial.rs  std_serial_handler.rs  std_serial_port_manager.rs
src/codi_protocol_common/src/std_serial_handler/: mod.rs
src/codi_stock_proto/: Cargo.toml
src/codi_stock_proto/src/: lib.rs  packet.rs  serial_port.rs  stock_commands.rs
src/codi_stock_protocol/: Cargo.toml
src/codi_stock_protocol/src/: commands.rs  connection.rs  lib.rs  packet.rs  serial.rs  serial_manager.rs  stock_commands.rs
