[workspace]
members = [
    "src/codi_stock_proto",
    "src/codi_os_proto",
    "src/codi_daemon_proto",
    "src/codi_proto_common",
    "src/codi_bootload_proto" 
]

[profile.dev]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 'z'
debug = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
debug = false
