[workspace]
members = [
    "src/codi_boot_protocol",
    "src/codi_daemon_protocol",
    "src/codi_os_protocol",
    "src/codi_protocol_common",
    "src/codi_stock_protocol",
]

[profile.dev]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 'z'
debug = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
debug = false
