[workspace]
members = [
    "src/codi_boot_protocol",
    "src/codi_daemon_protocol",
    "src/codi_os_protocol",
    "src/codi_protocol_common",
    "src/codi_stock_protocol",
]
resolver = "1"

[workspace.package]
authors = ["The Cosmo-CoDiOS Developers <shymega@shymega.org.uk>"]
rust-version = "1.67.0"
homepage = "https://github.com/Cosmo-CoDiOS"
readme = "README.md"
repository = "https://github.com/Cosmo-CoDiOS/CoDiOS.git"
edition = "2018"

[workspace.dependencies]
anyhow = { version = "1.0.72", default-features = false }
core2 = { version = "0.4.0", default-features = false }
thiserror-no-std = "2.0.2"
structure = { git = "https://github.com/liranringel/structure" }

[profile.dev]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 'z'
debug = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
debug = false
