[package]
name = "codi_boot_protocol"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.72", default-features = false }
core2 = { version = "0.4.0", default-features = false }
thiserror-no-std = "2.0.2"

[dependencies.prost]
version = "0.11.9"
default-features = false
features = ["prost-derive"]

[dependencies.prost-types]
version = "0.11.9"
default-features = false

[dependencies.codi_protocol_common]
path = "../codi_protocol_common"

[build-dependencies.prost-build]
version = "0.11.9"
default-features = false

