[package]
name = "codi_bootload_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
core2 = "0.4.0"

[dependencies.prost]
version = "0.11.2"
default-features = false
features = ["prost-derive"]

[dependencies.prost-types]
version = "0.11.2"
default-features = false

[dependencies.codi_protocol_common]
git = "https://github.com/Cosmo-CoDiOS/codi_protocols"
branch = "main"
features = ["stm32"]
default-features = false

[build-dependencies.prost-build]
version = "0.11.2"
default-features = false
