[package]
name = "codi_daemon_protocol"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
# license.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
core2.workspace = true
thiserror = "*"

[dependencies.codi_protocol_common]
path = "../codi_protocol_common"
