[package]
name = "codi_os_proto"
version = "0.1.0"
edition = "2018"

[dependencies]

[dependencies.prost]
version = "0.9.0"
default-features = false
features = ["prost-derive"]

[dependencies.prost-types]
version = "0.9.0"
default-features = false

[dependencies.codi_proto_common]
git = "https://github.com/Cosmo-CoDiOS/codi_protos"
branch = "main"

[build-dependencies.prost-build]
version = "0.9.0"
default-features = false
