[package]
name = "codi_os_proto"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.prost]
version = "0.10.3"
default-features = false
features = ["prost-derive"]

[dependencies.prost-types]
version = "0.10.1"
default-features = false

[dependencies.codi_proto_common]
git = "https://github.com/Cosmo-CoDiOS/codi_protos"
branch = "main"
default-features = false
features = ["runs-on-stm32"]

[build-dependencies.prost-build]
version = "0.10.3"
default-features = false
