[package]
name = "codi_os_protocol"
version = "0.3.0"
edition = "2021"

[features]
default = []
stm32 = ["codi_protocol_common/stm32"]
std = ["codi_protocol_common/std"]

[dependencies]
core2 = "0.4.0"

[dependencies.prost]
version = "0.11.8"
default-features = false
features = ["prost-derive"]

[dependencies.prost-types]
version = "0.11.8"
default-features = false

[dependencies.codi_protocol_common]
path = "../codi_protocol_common"
optional = true

[build-dependencies.prost-build]
version = "0.11.8"
default-features = false
