[package]
name = "codi_os_protocol"
version = "0.5.0"
edition = "2021"

[dependencies]
core2 = { version = "0.4.0", default-features = false }

[dependencies.prost]
version = "0.11.9"
default-features = false
features = ["prost-derive"]

[dependencies.prost-types]
version = "0.11.9"
default-features = false

[dependencies.codi_protocol_common]
path = "../codi_protocol_common"

[build-dependencies.prost-build]
version = "0.11.9"
default-features = false
