[package]
name = "codi_os_protocol"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
# license.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
core2.workspace = true
thiserror-no-std.workspace = true

[dependencies.prost]
version = "0.11.9"
default-features = false
features = ["prost-derive"]

[dependencies.prost-types]
version = "0.11.9"
default-features = false

[dependencies.codi_protocol_common]
path = "../codi_protocol_common"

[build-dependencies.prost-build]
version = "0.11.9"
default-features = false
