[package]
name = "codi_protocol_common"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.72", default-features = false }
core2 = { version = "0.4.0", default-features = false }
thiserror-no-std = "2.0.2"

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64"))'.dependencies]
serialport = "4.2.2"
