[package]
name = "codi_protocol_common"
version = "0.9.1"
edition.workspace = true
authors.workspace = true
# license.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
core2.workspace = true
thiserror-no-std.workspace = true

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64"))'.dependencies]
serialport = "4.2.2"
