[package]
name = "codi_stock_protocol"
version = "0.9.1"
edition.workspace = true
authors.workspace = true
# license.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
core2.workspace = true
thiserror-no-std.workspace = true
structure.workspace = true

[dependencies.codi_protocol_common]
path = "../codi_protocol_common"
